IGNITE-26345 Error handling during ignite server start process is added as well as corresponding tests